ruka-lang.org/src/lib/interpreter/fixtures/ok/now.ruka
let main = () do
	let t = ruka.now()
	ruka.println(t > 0.0)
end
