ruka-lang.org/src/lib/interpreter/fixtures/type-err/non-bool-condition.ruka
// expect: expected bool
let main = () do
    if 5 do 1
end
